--- a/client/src/components/navBar/index.css
+++ b/client/src/components/navBar/index.css
@@ -1,9 +1,12 @@
 .nav-container{
-    width:250px;
+    width:350px;
     height:100%;
     border-right: 2px solid black;
+    background-color:#2F303B;
 }
 .nav-box{
+    background-color:#00ACC2;
+    color:white;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +16,4 @@
 .text-link {
     color: inherit;
     text-decoration: inherit;
-}
-.nav-box:hover{
-    background-color:grey;
 }
