setting up historical data

--- a/client/src/components/donutGraph/index.css
+++ b/client/src/components/donutGraph/index.css
@@ -1,5 +1,4 @@
 .portfolio-card{
-    background-color:white;
-    box-shadow: 3px 3px #333;
-    margin-left: 20px;
+    color:white;
+    width:400px;
 }
