--- a/client/src/components/navBar/index.css
+++ b/client/src/components/navBar/index.css
@@ -1,19 +1,52 @@
+.title-box{
+    height:120px;
+    display:flex;
+    margin-right:auto;
+    margin-left:auto;
+    border-bottom:1px solid #aaa;
+    justify-content: left;
+    align-items: center;
+    margin-bottom:20px;
+}
+.nav-title{
+    color:white;
+    font-size:30px;
+    text-align: center;
+}
 .nav-container{
     width:350px;
     height:100%;
     border-right: 2px solid black;
-    background-color:#2F303B;
+    background-color:#354052;
 }
 .nav-box{
-    background-color:#00ACC2;
+    margin-right:auto;
+    margin-left:auto;
+    width:90%;
+    margin-top:5px;
+    margin-bottom:5px;
+    background-color:inherit;
     color:white;
     display:flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    height:100px;
-    border-bottom:1px solid black;
+    height:60px;
+    font-size:18px;
+}
+.icon{
+    color:white;
+    font-size:24px;
+    padding-left:40px;
+    padding-right:10px;
+}
+.nav-box:hover {
+    cursor:pointer;
+    background-color: #2D3646;
 }
 .text-link {
-    color: inherit;
+    color: white;
     text-decoration: inherit;
+}
+.active{
+    background-color:#2D3646;
 }
