--- a/client/src/components/portfolio/index.css
+++ b/client/src/components/portfolio/index.css
@@ -1,21 +1,45 @@
 .portfolio-container{
     display:flex;
     flex-direction: column;
-    width:90%;
+    width:70%;
     margin-left:auto;
     margin-right:auto;
+    /* border:2px solid red; */
+    margin-top:40px
 }
 .performance-graph-container{
-    width:92%;
-    background-color:rgb(122, 125, 153);
-    height:500px;
-    margin:20px;
-    margin-left:auto;
-    margin-right:auto;
+    width:100%;
+    height:400px;
+}
+
+.second-row{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top:20px;
+    /* border:2px solid blue; */
 }
 .donut-graph-container{
-    width:400px;
-    background-color:rgb(122, 125, 153);
-    box-shadow: 3px 3px #333;
+    display:flex;
+    justify-content: center;
+    width:40%;
+    height: 250px;
     margin-left:auto;
+}
+.stats{
+    display:flex;
+    justify-content: center;
+    width:55%;
+    height:250px;
+}
+.card{
+    background-color:white;
+    -moz-box-shadow: 0px 1px 5px 1px #676767;
+    -webkit-box-shadow: 0px 1px 5px 1px #676767;
+    box-shadow: 0px 1px 5px 1px #676767;
+}
+
+.third-row{
+    margin-top:20px;
+    width:100%
 }
