--- a/client/src/components/performanceGraph/index.css
+++ b/client/src/components/performanceGraph/index.css
@@ -1,7 +1,12 @@
 .performgraph {
     display:relative;
     width:100%;
-    height:300px;
+    height:400px;
     margin-left:auto;
     margin-right:auto;
+}
+
+#chartdiv {
+    height:100%;
+    width:100%;
 }
