--- a/client/src/components/coinlist/index.css
+++ b/client/src/components/coinlist/index.css
@@ -27,7 +27,6 @@
     justify-content: left;
     padding-left:5px;
     border-bottom:1px solid black;    
-    border-bottom:1px solid black;
 }
 .name{
     display:flex;
@@ -40,11 +39,16 @@
     padding-right:5px;
 }
 .negative{
-    color:red;
+    color:#ff0000;
 }
 .positive{
-    color:green;
+    color:#008000;
 }
 .name, .quantity, .price, .coin-value, .daily {
     border-right:1px solid black;
+}
+
+.negative i,.positive i {
+    display: inline-block;
+    vertical-align: middle;
 }
