--- a/client/src/components/navBar/index.css
+++ b/client/src/components/navBar/index.css
@@ -14,8 +14,8 @@
     text-align: center;
 }
 .nav-container{
-    width:350px;
-    height:100%;
+    width:400px;
+    height:inherit;
     border-right: 2px solid black;
     background-color:#354052;
 }
