--- a/client/src/components/portfolio/index.css
+++ b/client/src/components/portfolio/index.css
@@ -1,12 +1,14 @@
 .portfolio-container{
     display:flex;
     flex-direction: column;
-    width:70%;
+    float:right;
+    width:90%;
+    margin-top:50px;
     margin-left:auto;
     margin-right:auto;
-    /* border:2px solid red; */
-    margin-top:40px
+    margin-top:40px;
 }
+
 .performance-graph-container{
     width:100%;
     height:400px;
@@ -41,5 +43,35 @@
 
 .third-row{
     margin-top:20px;
-    width:100%
+    width:100%;
+    margin-bottom:50px;
+}
+
+.test-container{
+    width:100%;
+    overflow: auto;
+    display:flex;
+    justify-content: center;
+}
+
+.header { 
+    background-color: #344052;
+    color:white;
+    padding-top:10px;
+    padding-bottom:10px;
+    margin-bottom:10px;
+}
+.title{
+    font-size:30px;
+    font-weight:400;
+    text-align:center;
+    margin-top:0;
+    margin-bottom:0;
+}
+.title-sub{
+    font-size:20px;
+    font-weight:400;
+    text-align: center;
+    margin-top:10px;
+    margin-bottom:10px;
 }
