--- a/client/src/components/SignUp/index.css
+++ b/client/src/components/SignUp/index.css
@@ -17,10 +17,10 @@
     margin-top:10px;
 }
 
-input,button {
+/* input,button {
     height:30px;
     width:200px;
-}
+} */
 
 .register-container{
     background-color:white;
