--- a/client/src/components/transactiontable/index.css
+++ b/client/src/components/transactiontable/index.css
@@ -87,3 +87,8 @@ p.subheader {
 .coin-img{
     padding-right:10px;
 }
+.form-error{
+    text-align: center;
+    font-size:20px;
+    color:red;
+}
