--- a/client/src/components/transactiontable/index.css
+++ b/client/src/components/transactiontable/index.css
@@ -4,6 +4,9 @@
     -webkit-box-shadow: 0px 1px 5px 1px #676767;
     box-shadow: 0px 1px 5px 1px #676767;
 }
+.coinList-container {
+    margin-bottom:50px;
+}
 .coin-container{
     width:100%;
 }
