--- a/client/src/components/transactions/index.css
+++ b/client/src/components/transactions/index.css
@@ -8,12 +8,39 @@
     display:flex;
     flex-direction: column;
     margin-top:40px;
-    width:90%;
+    width:80%;
     margin-top:50px;
     margin-left:auto;
     margin-right:auto;
 }
-
+.row-container{
+    display:flex;
+    margin-bottom:20px;
+}
+.display-container{
+    margin-top:20px;
+    width:300px;
+    display:flex;
+    flex-direction: column;
+}
+.transactions-container input{
+    width:300px;
+}
+.transactions-second-row{
+    padding-left:30px;
+    width:300px;
+    display:flex;
+    align-items: flex-start;
+}
+.display-img {
+    padding-left:10px;
+    padding-right:10px;
+}
+.display-title{
+    display:flex;
+    align-items: center;
+    border-bottom:1px solid grey;
+}
 .card{
     background-color:white;
     -moz-box-shadow: 0px 1px 5px 1px #676767;
@@ -21,7 +48,7 @@
     box-shadow: 0px 1px 5px 1px #676767;
 }
 .form-container{
-    margin-bottom:25px;
+    margin-bottom:40px;
     display:flex;
     flex-direction: column;
 }
@@ -32,15 +59,19 @@
     width:90%;
     display:flex;
     flex-direction: column;
+    justify-content: center; 
+    align-items: center;
     margin-left:auto;
-    margin-right:auto;    
+    margin-right:auto;   
 }
 .first-row{
+    padding-right:30px;
     width:300px;
     display:flex;
     flex-direction: column;
     justify-content: center;
     text-align:left;
+    margin-top:20px;
 }
 .first-row input{
     font-size:16px;
@@ -50,11 +81,15 @@
     font-size:20px;
     font-weight: 600;
 }
-div.sub-title{
+.display-button{
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:20px;
+    width:500px;
+}
+.x{
     padding-bottom:20px;
 }
-
-
 
 
 
@@ -79,7 +114,10 @@ div.sub-title{
     border: 0;
     overflow: hidden;
 }
-
+strong{
+    padding-right:5px;
+    padding-left:10px;
+}
 .switch-field label {
     display: inline-block;
     width: 120px;
@@ -116,4 +154,23 @@ border-radius: 4px 0 0 4px;
 
 .switch-field label:last-of-type {
 border-radius: 0 4px 4px 0;
+}
+.display-label{
+    font-size:18px;
+    font-weight:400;
+}
+.display-total{
+    font-weight:600;
+    font-size:18px;
+    padding-left:10px;
+}
+.underline-value{
+    padding-bottom:20px;
+    border-bottom:1px solid black;
+}
+.display-title{
+    margin-top:31px;
+}
+.form-error{
+    font-weight:bold;
 }
