--- a/client/src/components/emptyPortfolio/index.css
+++ b/client/src/components/emptyPortfolio/index.css
@@ -8,7 +8,7 @@
     margin-top:100px;
     margin-left:auto;
     margin-right:auto;
-    width:600px;
+    width:100%;
     display:flex;
     justify-content: center;
 }
@@ -38,4 +38,7 @@
 }
 .start-title{
     margin-top:0 !important;
+}
+.empty-third{
+    padding-bottom:20px;
 }
