--- a/client/src/components/SignUp/index.css
+++ b/client/src/components/SignUp/index.css
@@ -8,25 +8,42 @@
     justify-content: space-between;
 }
 .signup-form{
-    width:100%;
-    padding-left:40px;
+    margin-left:auto;
+    margin-right:auto;
+    width:350px;
     display:flex;
     flex-direction: column;
+    justify-content: center;
 }
 .signup-button {
+    cursor:pointer;
+    border-radius:25px;
+    background-color:#354052;
+    color:white;
+    width:150px;
+    height:50px;
     margin-top:10px;
+    margin-bottom:20px;
+    -moz-box-shadow: 0px 1px 5px 1px #676767;
+    -webkit-box-shadow: 0px 1px 5px 1px #676767;
+    box-shadow: 0px 1px 5px 1px #676767;
+}
+.signup-button:hover{
+    color:white;
+    background-color: #2d3646;
+    /* border:5px solid #2D3646;i */
+}
+.full-name{
+    margin-top:0;
 }
 
-/* input,button {
-    height:30px;
-    width:200px;
-} */
-
 .register-container{
+    border-radius:25px;
     background-color:white;
-    width:600px;
-    border:2px solid black;
+    color:black;
+    width:500px;
     display:flex;
+    flex-direction: column;
     align-items: center;
 }
 .form-label {
@@ -34,10 +51,11 @@
     font-size:20px;
     line-height: 1.2;
 }
+
 input {
-    width:300px;
+    height:30px;
+    width:90%;
     border:none;
-    /* border-bottom: 2px solid #ccc; */
 }
 input:focus{
     outline:none;
@@ -48,14 +66,102 @@ input:focus::placeholder{
 div .border-animation{
     display:flex;
     height:2px;
-    width:300px;
+    width:100%;
     background-color:#ccc;
     box-shadow: inset 0 0 0 0 #ccc;
     transition: all ease .5s;
 }
 input:focus + .border-animation{
-    box-shadow: inset 300px 0 0 0 black;
+    box-shadow: inset 400px 0 0 0 black;
 }
 .validation-container {
     display:flex;
+    flex-direction: column;
+}
+.validation-container div{
+    width:100%;
+}
+.signup-image-container{
+    width:100%;
+    height:100%;
+    margin-top:0;
+    margin-bottom:0;
+    background-image: url('https://www.itl.cat/pngfile/big/147-1475006_stock-market-wallpaper-trading-chart.jpg');
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+}
+.signup-cover{
+    margin-top:0;
+    margin-bottom:0;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.6)
+}
+.signup-title{
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:0;
+    margin-bottom:0;
+    font-size:62px;
+    color:white;
+    font-weight: bold;
+}
+
+.signup-title-box{
+    margin-left:auto;
+    margin-right:auto;
+    width:100%;
+    display:flex;
+    font-size:40px;
+    justify-content: center;
+    align-items: center;
+    padding-top:10px;
+    padding-bottom:10px;
+    border-bottom:1px solid black;
+}
+.signup-title-box .icon{
+    font-size:40px;
+    padding-left:0;
+    color:black;
+}
+div canvas{
+    top:0;
+    width: 100%;
+    height: 100%;
+    z-index: -1 !important;
+    display: block;
+}
+.testcard{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;    
+    margin-left:auto;
+    margin-right:auto;
+    top:0;
+    color:white;
+    position: absolute;
+    z-index: 1;
+}
+.signup-button-box{
+    margin-bottom:10px;
+    font-size:18px;
+    width:400px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.signup-h1{
+    font-weight: 300;
+    margin-left:auto;
+    margin-right:auto;
+}
+.error{
+    color:red;
+}
+.input-box-signup{
+    display:flex;
+    align-items: center;
+    width:90%;
 }
