--- a/client/src/components/loginModal/index.css
+++ b/client/src/components/loginModal/index.css
@@ -12,12 +12,12 @@
 }
 
 .modal-container{
-    border: 2px solid black;
+    border-radius:15px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:white;
+    background-color:#354052;
     width:500px;
 }
 .modal-header{
@@ -29,6 +29,9 @@
     padding:10px;
     cursor:pointer;
 }
+.login-icon{
+    padding-left:20px;
+}
 .close:hover{
     background-color:rgb(255, 81, 81);
 }
@@ -37,14 +40,29 @@
     padding-top:15px;
     font-size:30px;
 }
+.user-login{
+    margin-top:10px;
+}
+.form-title-login{
+    margin-top:0;
+    margin-bottom:10px;
+}
+.login-title-box{
+    border-bottom:1px solid white !important;
+}
+.login-title-icon{
+    color:white;
+    padding-right:10px;
+}
 .modal-form{
+    color:white;
     padding-bottom:15px;
     margin-bottom:40px;
     text-align: center;
     width:75%;
     margin-left:auto;
     margin-right:auto;
-    background-color:lightgrey;
+    background-color:#354052;
 }
 .login-input {
     padding-left:10px;
