--- a/client/src/components/SignUp/index.css
+++ b/client/src/components/SignUp/index.css
@@ -115,8 +115,8 @@ input:focus + .border-animation{
     font-size:40px;
     justify-content: center;
     align-items: center;
-    padding-top:10px;
-    padding-bottom:10px;
+    padding-top:20px;
+    padding-bottom:20px;
     border-bottom:1px solid black;
 }
 .signup-title-box .icon{
@@ -158,7 +158,8 @@ div canvas{
     margin-right:auto;
 }
 .error{
-    color:red;
+    font-size:18px;
+    color:hsl(0, 100%, 65%);
 }
 .input-box-signup{
     display:flex;
