--- a/client/src/components/portfolio/index.css
+++ b/client/src/components/portfolio/index.css
@@ -15,6 +15,7 @@
 }
 
 .second-row{
+    height:300px;
     display:flex;
     justify-content: space-around;
     align-items: center;
@@ -35,12 +36,19 @@
     height:250px;
 }
 .card{
+    height:100%;
     background-color:white;
     -moz-box-shadow: 0px 1px 5px 1px #676767;
     -webkit-box-shadow: 0px 1px 5px 1px #676767;
     box-shadow: 0px 1px 5px 1px #676767;
 }
-
+.stats{
+    display:flex;
+    flex-direction: column;
+    justify-content: start;
+}
+.statsCard-content{
+}
 .third-row{
     margin-top:20px;
     width:100%;
@@ -62,6 +70,11 @@
     margin-bottom:10px;
 }
 .title{
+    padding-top:10px;
+    padding-bottom:10px !important;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     font-size:30px;
     font-weight:400;
     text-align:center;
@@ -74,4 +87,17 @@
     text-align: center;
     margin-top:10px;
     margin-bottom:10px;
+}
+.stats-icon{
+    padding-right:15px;
+    padding-left:15px;
+    font-size:30px;
+}
+.stats-icon:hover{
+    cursor: pointer;
+    color:grey;
+}
+.stats-title{
+    background-color:#344052;
+    color:white;
 }
