--- a/client/src/components/transactions/index.css
+++ b/client/src/components/transactions/index.css
@@ -51,6 +51,7 @@
     margin-bottom:40px;
     display:flex;
     flex-direction: column;
+    height:auto;
 }
 .calender{
     border:1px solid black;
